@@ -3,6 +3,6 @@ git 配置文件，提供了配色、别名等基本的配置。
 这份配置不会被自动安装。
 
 ```bash
-sudo cp .gitconfig ~/.gitconfig
+./init.sh
 ```
 
