@@ -1,2 +1,2 @@
-`/etc/hosts`，纯自用。
+`/etc/hosts`，纯自用，不会被安装。
 
