@@ -2,6 +2,9 @@
 
 syntax "go" "\.go$"
 
+# Set up a formatter since spelling is probably useless...
+formatter gofmt -w
+
 # Types.
 color green "\<(bool|u?int(8|16|32|64)?|float(32|64)|complex(64|128)|byte|rune|uintptr|string|error)\>"
 color green "\<((<-[[:space:]]*)chan|chan[[:space:]]*<-|const|func|interface|map|struct|type|var)\>"
@@ -40,6 +43,3 @@ color brightblue start="/\*" end="\*/"
 
 # Trailing whitespace.
 color ,green "[[:space:]]+$"
-
-# Set up the formatter since spelling is probably useless...
-formatter gofmt -w
