@@ -104,7 +104,6 @@ Include = /etc/pacman.d/mirrorlist
 #Server = http://repo.archlinux.fr/$arch
 
 [archlinuxcn]
-SigLevel = Optional TrustAll
-#Server = http://repo.archlinuxcn.org/$arch
-Server = http://mirrors.ustc.edu.cn/archlinuxcn/$arch
+SigLevel = Optional TrustedOnly
+Server = https://mirrors.ustc.edu.cn/archlinuxcn/$arch
 
