@@ -2,109 +2,100 @@
 # --------
 # Most of these settings can be toggleable, either via the toggle-*
 # actions or via the option menu (bound to `o` by default).
-
+#
 # View settings
 #
 # Supported column types and their options:
 #
 #   author
-#    - display (enum) [no|full|abbreviated|email|email-user]
-#					: Show author information?
+#    - display (enum) [no|full|abbreviated|email|email-user]  : Show author information?
 #   commit-title
-#    - display (bool)			: Show the commit title?
-#    - graph (enum) [no|v2|v1]		: Show the commit graph? (main view only)
-#    - refs (bool)			: Show branches, tags and remotes? (main view only)
-#    - overflow (boolint)		: Highlight overflows? Defaults to 50 when enabled.
-#
+#    - display (bool)           : Show the commit title?
+#    - graph (enum) [no|v2|v1]  : Show the commit graph? (main view only)
+#    - refs (bool)              : Show branches, tags and remotes? (main view only)
+#    - overflow (boolint)       : Highlight overflows? Defaults to 50 when enabled.
 #   date
-#    - display (enum) [no|default|local|relative|short]
-#					: Show dates?
+#    - display (enum) [no|default|local|relative|short]       : Show dates?
 #   file-name
-#    - display (enum) [no|always|auto]	: Show file names?
-#
+#    - display (enum) [no|always|auto]                        : Show file names?
 #   file-size
-#    - display (enum) [no|default|units]	: Show file sizes?
-#
+#    - display (enum) [no|default|units]                      : Show file sizes?
 #   id
-#    - display (bool)			: Show commit/tree ID?
-#
+#    - display (bool)           : Show commit/tree ID?
 #   line-number
-#    - display (bool)			: Show line numbers?
-#    - interval (int)			: Interval between line numbers; defaults to 5
-#
+#    - display (bool)           : Show line numbers?
+#    - interval (int)           : Interval between line numbers; defaults to 5
 #   mode
-#    - display (bool)			: Show file modes?
-#
+#    - display (bool)           : Show file modes?
 #   status
-#    - display (enum) [no|short|long]	: Show status label?
-#
+#    - display (enum) [no|short|long]                         : Show status label?
 #   text
-#    - display (bool)			: Show text?
-#    - commit-title-overflow (boolint)	: Highlight overflow in log and diff view?
+#    - display (bool)           : Show text?
+#    - commit-title-overflow (boolint)                        : Highlight overflow in log and diff view?
 #
 # All columns also support a width option to configure the max width of
 # the column. Use zero (the default value) to auto-size the column based
 # on the content.
 
-set blame-view	= date:default author:full file-name:auto id:yes,color line-number:no,interval=5 text
-set grep-view	= file-name:no line-number:yes,interval=1 text
-set main-view	= line-number:no,interval=5 id:yes date:default author:full commit-title:yes,graph,refs,overflow=no
-set refs-view	= line-number:no id:yes date:default author:full ref commit-title
-set stash-view	= line-number:no,interval=5 id:yes date:default author:full commit-title
-set status-view	= line-number:no,interval=5 status:short file-name
-set tree-view	= line-number:no,interval=5 mode author:full file-size date:default id:yes file-name
+set blame-view  = date:default author:full file-name:auto id:yes,color line-number:no,interval=5 text
+set grep-view = file-name:no line-number:yes,interval=1 text
+set main-view = line-number:no,interval=5 id:yes date:default author:full commit-title:yes,graph,refs,overflow=no
+set refs-view = line-number:no id:yes date:default author:full ref commit-title
+set stash-view  = line-number:no,interval=5 id:yes date:default author:full commit-title
+set status-view = line-number:no,interval=5 status:short file-name
+set tree-view = line-number:no,interval=5 mode author:full file-size date:default id:yes file-name
 
 # Pager based views
-set pager-view	= line-number:no,interval=5 text
-set stage-view	= line-number:no,interval=5 text
-set log-view	= line-number:no,interval=5 text
-set blob-view	= line-number:no,interval=5 text
-set diff-view	= line-number:no,interval=5 text:yes,commit-title-overflow=no
+set pager-view  = line-number:no,interval=5 text
+set stage-view  = line-number:no,interval=5 text
+set log-view  = line-number:no,interval=5 text
+set blob-view = line-number:no,interval=5 text
+set diff-view = line-number:no,interval=5 text:yes,commit-title-overflow=no
 
 # UI display settings
-set show-changes		= yes		# Show changes commits in the main view?
-set wrap-lines			= no		# Wrap long lines in pager views?
-set tab-size			  = 2		# Number of spaces to use when expanding tabs
-set line-graphics		= default	# Enum: ascii, default, utf-8
+set show-changes = yes            # Show changes commits in the main view?
+set wrap-lines = yes              # Wrap long lines in pager views?
+set tab-size = 2                  # Number of spaces to use when expanding tabs
+set line-graphics = default       # Enum: ascii, default, utf-8
 
 # Format reference names based on type.
-#  - head		: The current HEAD.
-#  - tag		: A signed tag.
-#  - local-tag		: An unsigned tag.
-#  - remote		: A remote.
-#  - tracked-remote	: The remote tracked by current HEAD.
-#  - replace		: A replaced reference.
-#  - branch		: Any other reference.
+#  - head : The current HEAD.
+#  - tag : A signed tag.
+#  - local-tag : An unsigned tag.
+#  - remote : A remote.
+#  - tracked-remote : The remote tracked by current HEAD.
+#  - replace : A replaced reference.
+#  - branch : Any other reference.
 # If no format is defined for `local-tag` then the one for `tag` is used.
 # Similarly, `remote` is used if no `tracked-remote` format exists.
 # Prefix with `hide:` to not show that reference type, e.g. `hide:remote`.
 # Expects a space separated list of format strings.
-set reference-format		= [branch] <tag> {remote} ~replace~
+set reference-format = [branch] <tag> {remote} ~replace~
 
 # Settings controlling how content is read from Git
-set commit-order		= auto		# Enum: auto, default, topo, date, reverse (main)
-set status-untracked-dirs	= yes		# Show files in untracked directories? (status)
-set ignore-space		= no		# Enum: no, all, some, at-eol (diff)
-set show-notes			= yes		# When non-bool passed as `--show-notes=...` (diff)
-#set diff-context		= 3		# Number of lines to show around diff changes (diff)
-#set diff-options		= -C		# User-defined options for `tig show` (git-diff)
-#set blame-options		= -C -C -C	# User-defined options for `tig blame` (git-blame)
-#set log-options		= --pretty=raw	# User-defined options for `tig log` (git-log)
-#set main-options		= -n 1000	# User-defined options for `tig` (git-log)
-#set mailmap			= yes		# Use .mailmap to show canonical name and email address
+set commit-order = auto           # Enum: auto, default, topo, date, reverse (main)
+set status-untracked-dirs = yes   # Show files in untracked directories? (status)
+set ignore-space = no             # Enum: no, all, some, at-eol (diff)
+set show-notes = yes              # When non-bool passed as `--show-notes=...` (diff)
+#set diff-context = 3             # Number of lines to show around diff changes (diff)
+#set diff-options = -C            # User-defined options for `tig show` (git-diff)
+#set blame-options = -C -C -C     # User-defined options for `tig blame` (git-blame)
+#set log-options = --pretty=raw   # User-defined options for `tig log` (git-log)
+#set main-options = -n 1000       # User-defined options for `tig` (git-log)
+#set mailmap = yes                # Use .mailmap to show canonical name and email address
 
 # Misc
-set refresh-mode		= auto		# Enum: manual, auto, after-command, periodic
-set refresh-interval		= 10		# Interval in seconds between refreshes
-set ignore-case			= no		# Ignore case when searching?
-set focus-child			= yes		# Move focus to child view when opened?
-set horizontal-scroll		= 50%		# Number of columns to scroll as % of width
-set split-view-height		= 67%		# Height of the bottom view for horizontal splits
-set vertical-split		= auto		# Enum: horizontal, vertical, auto; Use auto to
-						# switch to horizontal split when width allows it
-set split-view-width		= 50%		# Width of right-most view for vertical splits
-set editor-line-number		= yes		# Automatically pass line number to editor? Used
-						# for opening file at specific line e.g. from a diff
-set mouse			= no		# Enable mouse support?
-set mouse-scroll		= 3		# Number of lines to scroll via the mouse
+set refresh-mode = auto           # Enum: manual, auto, after-command, periodic
+set refresh-interval = 10         # Interval in seconds between refreshes
+set ignore-case = yes             # Ignore case when searching?
+set focus-child = yes             # Move focus to child view when opened?
+set horizontal-scroll = 50%       # Number of columns to scroll as % of width
+set split-view-height = 67%       # Height of the bottom view for horizontal splits
+set vertical-split = auto         # Enum: horizontal, vertical, auto; Use auto
+                                  #   to switch to horizontal split when width allows it
+set split-view-width = 50%        # Width of right-most view for vertical splits
+set editor-line-number = yes      # Automatically pass line number to editor?
+                                  #   Used for opening file at specific line e.g. from a diff
+set mouse = no                    # Enable mouse support?
+set mouse-scroll = 3              # Number of lines to scroll via the mouse
 
