@@ -1,4 +1,2 @@
-一个灵活但效率低下的TTY 分屏方案，使用了Vim 键位，适合在需要SSH 的环境（例如VPS）上使用。
-
-tmux 在文本输出的效率上非常之低，绝对不能打印大量文本。
+一个灵活但输出效率较低的TTY 分屏方案，使用了Vim 键位，非常适合在SSH 环境中使用。
 
