@@ -1,3 +1,15 @@
+v2016-04-16.3
+  * zsh:
+      解决了fc 无法显示所有历史的问题
+  * nano:
+      同步了新版的语法高亮文件
+  * tmux:
+      修复了2.1 版本引入的的鼠标滚屏问题，默认配置不再兼容2.1 之前的版本
+  * pacman:
+      修改了archlinuxcn 源
+  * tig:
+      搜索时不再区分大小写
+
 v2016-04-16.2
   * vim:
       重新试图与color_coded 共用一套clang
